--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
+            <header>
+                Hi, I'm CodeSensei. Here are some lyrics I'm sure you'll enjoy. Please check out the beats and moves on YouTube, guaranteed
+                to make you smile :) . Proper loudspeakers recommended.
+            </header>
             <main>Main</main>
             <div id="div-1" class="flex-items">
                 Div 1
