Complete flexbox exercise

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">                               <!-- CS = CodeSensei337 comments -->
+<html class="no-js" lang="eng">                                                 <!-- CS: = CodeSensei337 comments -->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Flexbox Demonstration</title>                                    <!-- CS: added title -->
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,30 +13,69 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+
+        <!-- CS : added stylesheets -->
+        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade 
+                your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
+       
         <section class="flex-container">
             <header>
-                Hi, I'm CodeSensei. Here are some lyrics I'm sure you'll enjoy. Please check out the beats and moves on YouTube, guaranteed
-                to make you smile :) . Proper loudspeakers recommended.
+                Hi, I'm CodeSensei337. Here are some lyrics I'm sure you'll enjoy. Please check out the beats and moves on YouTube, 
+                guaranteed to make you smile.<br> Proper channel-stereo loudspeakers recommended :) .
             </header>
-            <main>Main</main>
-            <div id="div-1" class="flex-items">
-                Div 1
+            <main>
+                You might see me in a Lambo', Camo snapback, Rambo, Five hundred horses, Django, Two two chicken, Nando,<br> 
+                You might see me in a 'rari, Old school fella, Atari, It's a new dance, no Tango, Anywhere I go, I make the gang go,<br> 
+                Fester, Fester, Fester Anywhere I go, I make the gang go, Fester, Fester, Fester Anywhere I go, I make the gang go ... 
+            </main>
+            <div id="main-copyright" class="flex-items">
+                -- Copyright 2015 Lethal Bizzle, Diztortion, Amanda Mellid
             </div>
-            <div id="div-2" class="flex-items">
-                Div 2
+            <div id="div-1" class="flex-items">                            <!-- CS : inserted Wiley's lyrics from Boasty copyright 2019--> 
+                Boasty, boasty, Godfather, man a OG<br>
+                Man a half humble, man are boasty<br>
+                Fling a ragga riddim like it's '03<br>
+                Boasty, house on the coast G<br>
+                My money so long it doesn't know me<br>
+                It's looking at my kids, like I'm boasty<br>
+                Bidi bang bang bang, ayy<br>
+                -- Wiley
             </div>
-            <div id="div-3" class="flex-items">
-                Div 3
+            <div id="div-2" class="flex-items">                            <!-- CS : inserted Stefflon Don's lyrics from Boasty copyright 2019-->
+                Ayo Idris, tell dem other gyal nuh tek di piss<br>
+                When Steffy step out with a ton of energist<br>
+                Body comfortable and me physically fit<br>
+                'N me brown 'n sweet just like the chocolate<br> 
+                Yo Wiley, dem wann' sound like me<br>
+                Shut down any city with my bad gyal posse<br>
+                Hah, every man want piece of me<br>
+                -- Stefflon Don
             </div>
-            <footer>Footer</footer>
+            <div id="div-3" class="flex-items">                            <!-- CS : inserted Idris Elba's lyrics from Boasty copyright 2019--> 
+                I came to babylon do my ting<br> 
+                Sabbie put me on the gram you know<br>
+                Remix ting hol tyt Wiley w'the Pachino flow<br>  
+                Godfather part 2 call me De Niro<br> 
+                I came to win battle me that’s a sin<br>
+                I been this way from day<br>
+                And I write for myself no ghosty<br>
+                -- Idris Elba
+            </div>
+            <div id="flex-items-copyright"  class="flex-items">
+                <br>
+                -- Copyright  2019  Wiley - Boasty Remix
+            </div>
+            <footer>
+
+            </footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
