--- a/index.html
+++ b/index.html
@@ -28,50 +28,51 @@
        
         <section class="flex-container">
             <header>
-                Hi, I'm CodeSensei337. Here are some lyrics I'm sure you'll enjoy. Please check out the beats and moves on YouTube, 
-                guaranteed to make you smile.<br> Proper channel-stereo loudspeakers recommended :) .
+                <center>
+                Hi, I'm CodeSensei337. Here are some quotes I'm sure you'll enjoy.
+                <br>Some are fairly serious, others require a sense of humour.
+                <br>All are however great! Enjoy :) .
+                </center>
             </header>
             <main>
-                You might see me in a Lambo', Camo snapback, Rambo, Five hundred horses, Django, Two two chicken, Nando,<br> 
-                You might see me in a 'rari, Old school fella, Atari, It's a new dance, no Tango, Anywhere I go, I make the gang go,<br> 
-                Fester, Fester, Fester Anywhere I go, I make the gang go, Fester, Fester, Fester Anywhere I go, I make the gang go ... 
+                I have a dream today! I have a dream that one day every valley shall be exalted, every hill and mountain shall be made low, 
+                the rough places will be made plain, and the crooked places will be made straight, and the glory of the Lord shall be revealed, 
+                and all flesh shall see it together.
             </main>
             <div id="main-copyright" class="flex-items">
-                -- Copyright 2015 Lethal Bizzle, Diztortion, Amanda Mellid
+                -- Martin Luther King Jnr
             </div>
-            <div id="div-1" class="flex-items">                            <!-- CS : inserted Wiley's lyrics from Boasty copyright 2019--> 
-                Boasty, boasty, Godfather, man a OG<br>
-                Man a half humble, man are boasty<br>
-                Fling a ragga riddim like it's '03<br>
-                Boasty, house on the coast G<br>
-                My money so long it doesn't know me<br>
-                It's looking at my kids, like I'm boasty<br>
-                Bidi bang bang bang, ayy<br>
-                -- Wiley
-            </div>
-            <div id="div-2" class="flex-items">                            <!-- CS : inserted Stefflon Don's lyrics from Boasty copyright 2019-->
-                Ayo Idris, tell dem other gyal nuh tek di piss<br>
-                When Steffy step out with a ton of energist<br>
-                Body comfortable and me physically fit<br>
-                'N me brown 'n sweet just like the chocolate<br> 
-                Yo Wiley, dem wann' sound like me<br>
-                Shut down any city with my bad gyal posse<br>
-                Hah, every man want piece of me<br>
-                -- Stefflon Don
-            </div>
-            <div id="div-3" class="flex-items">                            <!-- CS : inserted Idris Elba's lyrics from Boasty copyright 2019--> 
-                I came to babylon do my ting<br> 
-                Sabbie put me on the gram you know<br>
-                Remix ting hol tyt Wiley w'the Pachino flow<br>  
-                Godfather part 2 call me De Niro<br> 
-                I came to win battle me that’s a sin<br>
-                I been this way from day<br>
-                And I write for myself no ghosty<br>
-                -- Idris Elba
-            </div>
-            <div id="flex-items-copyright"  class="flex-items">
+            <div id="div-1" class="flex-items">                            <!-- CS : inserted Mark Twain quotes --> 
+                It is better to keep your mouth closed and let people think you are a fool than to open it and remove all doubt.<br>
                 <br>
-                -- Copyright  2019  Wiley - Boasty Remix
+                Don't let schooling interfere with your education.<br>
+                <br>
+                It's no wonder that truth is stranger than fiction. Fiction has to make sense.<br>
+                <br>
+                All generalizations are false, including this one.<br>
+                <br>
+                -- Mark Twain
+            </div>
+            <div id="div-2" class="flex-items">                            <!-- CS : inserted Maya Angelou quotes -->
+                Courage is the most important of all the virtues, because without courage you can't practice any other virtue consistently. 
+                You can practice any virtue erratically, but nothing consistently without courage.<br>
+                <br>
+                My mother said I must always be intolerant of ignorance but understanding of illiteracy. That some people, unable to go to school, 
+                were more educated and more intelligent than college professors.
+                <br>
+                <br>
+                <br> -- Maya Angelou
+            </div>
+            <div id="div-3" class="flex-items">                            <!-- CS : inserted Paul Dirac quotes --> 
+                Pick a flower on Earth and you move the farthest star.<br>
+                <br>
+                The fundamental laws necessary for the mathematical treatment of a large part of physics and the whole of chemistry are thus 
+                completely known, and the difficulty lies only in the fact that application of these laws leads to equations that are too 
+                complex to be solved.<br>
+                <br>
+                God used beautiful mathematics in creating the world.<br>
+                <br>
+                -- Paul Dirac
             </div>
             <footer>
 
